style: prevents button wrapping on longer passphrases

--- a/src/styles/views/mail.scss
+++ b/src/styles/views/mail.scss
@@ -142,6 +142,7 @@
       color: $color-brand;
       cursor: pointer;
       font-weight: $font-weight-bold;
+      white-space: nowrap;
 
       .material-icons {
         color: $color-brand;
